# DX12Learning

./: .gitignore  CMakeLists.txt
Chapter1-XMVector/: CMakeLists.txt  InitFunctions.cpp  VectorOps.cpp  tol.cpp  xmvec3.cpp
Chapter2-Matrix Algebra/: CMakeLists.txt  xmmatrix.cpp
Chapter4-Direct3D Initialization/: CMakeLists.txt  InitDirect3DApp.cpp
Chapter6-Drawing In Direct3D/: BoxApp.cpp  CMakeLists.txt
Chapter6-Drawing In Direct3D/Shaders/: color.hlsl
Chapter7-Drawing In Direct3D PartⅡ/: CMakeLists.txt
Chapter7-Drawing In Direct3D PartⅡ/LandAndWave/: CMakeLists.txt  FrameResource.h  LandAndWave.cpp  Wave.cpp  Wave.h
Chapter7-Drawing In Direct3D PartⅡ/LandAndWave/Shaders/: color.hlsl
Chapter7-Drawing In Direct3D PartⅡ/Shapes/: CMakeLists.txt  ShapesApp.cpp
Chapter7-Drawing In Direct3D PartⅡ/Shapes/Shaders/: color.hlsl
Common/: CMakeLists.txt
Common/cmake/: Compileshader.cmake
Common/inc/: Camera.h  GameTimer.h  UploadBuffer.h  d3dApp.h  d3dUtil.h  d3dx12.h
Common/src/: DDSTextureLoader.cpp  d3dApp.cpp  d3dUtil.cpp
